3/sample/podcmenv.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-con-env-da-cm
spec:
  containers:
    - name: nome-container
      image: nome-immagine
