3/sample/podcmvolume.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-con-volume-da-cm
spec:
  volumes:
    - name: volume-da-cm # nome volume
      configMap:
        name: esempio-configmap # nome configmap
  containers:
    - name: nome-container
      image: nome-immagine
      volumeMounts:
        - name: volume-da-cm # stesso nome volume
          mountPath: /percorso/nel/container
# risultato finale: due file in /percorso/nel/container:
# file chiamato "nome" con contenuto "Carmine"
# file chiamato "chiave" con contenuto "valore"
