3/sample/podsecretenv.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-con-env-da-secret
spec:
  containers:
    - name: nome-container
      image: nome-immagine
