3/sample/podsecretvolume.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-con-volume-da-secret
spec:
  volumes:
    - name: volume-da-secret # nome volume
      secret:
        secretName: esempio-secret # nome secret
  containers:
    - name: nome-container
      image: nome-immagine
      volumeMounts:
        - name: volume-da-secret # stesso nome volume
          mountPath: /percorso/nel/container
# risultato finale: due file in /percorso/nel/container:
# file chiamato "nome" con contenuto "Carmine"
# file chiamato "chiave" con contenuto "valore"
