3/sample/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prova-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /esempiopercorso
            pathType: Prefix
            backend:
              service:
                name: servizio-di-prova
                port:
                  number: 80
